# kiro-forge

./: .gitignore  AGENT-MODULE-CONCEPT.md  CONCEPT.md  LICENSE  POWER.md  README.md  kiroforge.example.yaml  pyproject.toml
docs/: POWER_SPEC.md
examples/agents/simple-reviewer/: agent.yaml  system-prompt.md
examples/agents/simple-reviewer/tests/: test_responses.yaml
examples/kiro_powers/demo-power/: POWER.md  hooks.yaml  steering.md  tools.yaml
examples/kiro_powers/demo-power/tests/: tests.yaml
examples/kiro_powers/mcp-hook-power/: POWER.md  hooks.yaml  steering.md  tools.yaml
examples/kiro_powers/mcp-hook-power/templates/: usage.md
examples/kiro_powers/mcp-hook-power/tests/: tests.yaml
schemas/: agent.schema.yaml  collection.schema.yaml  power.schema.yaml
src/kiroforge/: __init__.py  cli.py  config.py  executor.py  exporter.py  harness.py  models.py  parser.py  router.py  security.py  spdx.py  steering.py  templates.py  validator.py
templates/agents/api-reviewer/: agent.yaml  system-prompt.md
templates/agents/coordinator/: agent.yaml  system-prompt.md
templates/agents/database-specialist/: agent.yaml  system-prompt.md
templates/collections/backend-team/: collection.yaml
templates/steering/blank/: steering.md
templates/steering/common/: api-standards.md  code-conventions.md  deployment-workflow.md  security-policies.md  testing-standards.md
templates/steering/foundational/: product.md  structure.md  tech.md
tests/: test_executor.py  test_harness.py  test_integration.py  test_router.py  test_security.py  test_steering.py  test_validator.py
(+2 files in other folders)
